--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MP Solutions</title>
 	<link rel="stylesheet" href="css/styles.css">
@@ -9,17 +10,19 @@
 <body>
 	<div class="container">
 		<header class="header">
-			<nav class="nav">
-				<img id="logo" src="logo.png" alt="logo">
+			<div id="logo">
+				<img src="logo.png" alt="logo">
 				<div class="ulcontainer">
-					<ul>
-						<li><a href="#section1">Menu X</a></li>
-						<li><a href="#section2">Menu X</a></li>
-						<li><a href="#section3">Menu X</a></li>
-						<li><a href="#section4">Menu X</a></li>
-					</ul>
+					<nav class="nav">
+						<ul>
+							<li><a href="#section1">Menu X</a></li>
+							<li><a href="#section2">Menu X</a></li>
+							<li><a href="#section3">Menu X</a></li>
+							<li><a href="#section4">Menu X</a></li>
+						</ul>
+					</nav>
 				</div>
-			</nav>
+			</div>
 		</header>
 		<main class="main">
 			<section class="section" id="section1">
