advanced servicios section

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>MP Solutions</title>
+	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 	<div class="container">
 		<header class="header">
 			<div id="logo">
-				<img src="logo.png" alt="logo">
+				<h1><img src="logo.png" alt="MP Solutions"></h1>
 				<div class="ulcontainer">
 					<nav class="nav">
 						<ul>
-							<li><a href="#section1">Menu X</a></li>
+							<li><a href="#nosotros">Nosotros</a></li>
 							<li><a href="#section2">Menu X</a></li>
 							<li><a href="#section3">Menu X</a></li>
 							<li><a href="#section4">Menu X</a></li>
@@ -25,22 +26,59 @@
 			</div>
 		</header>
 		<main class="main">
-			<section class="section" id="section1">
-				<h1>SECTION 1</h1>
-			</section>
-			<section class="section" id="section2">
-				<h1>SECTION 2</h1>
-			</section>
-			<section class="section" id="section3">
-				<h1>SECTION 3</h1>
-			</section>
-			<section class="section" id="section4">
-				<h1>SECTION 4</h1>
-			</section>
-		</main>
-		<footer class="footer">
-			
-		</footer>
-	</div>
-</body>
-</html>
+			<section class="section nosotros" id="nosotros">
+					<div class="textcontainer">
+						<h2 class="title">Nosotros</h2>
+						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
+					</div>
+					<div class="arrow">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+				</section>
+				<section class="section servicios" id="section2">
+					<div class="textcontainer">
+						<h2 class="title">Servicios</h2>
+						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
+						<div class="boxParent">
+							<div class="boxChild">
+								<img src="#" alt="img">
+								<h3>Item</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
+							</div>
+							<div class="boxChild">
+								<img src="#" alt="img">
+								<h3>Item</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
+							</div>
+							<div class="boxChild">
+								<img src="#" alt="img">
+								<h3>Item</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quo maxime, officiis vero aperiam sequi vitae consectetur, architecto voluptatibus fugit sed numquam, corrupti eum sapiente, similique assumenda magnam! Sint, dicta.</p>
+							</div>
+							<div class="boxChild">
+								<img src="#" alt="img">
+								<h3>Item</h3>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit vel exercitationem laudantium tempora nostrum ipsam amet placeat est numquam provident quis, sequi ut a aperiam possimus, necessitatibus? Tenetur, quod, nam.</p>
+							</div>
+						</div>
+					</div>
+					<div class="arrow">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+				</section>
+				<section class="section contacto" id="section3">
+					<div class="textcontainer">
+						<h2 class="title">Contacto</h2>
+						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
+					</div>
+					<div class="arrow">
+						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+					</div>
+				</section>
+			</main>
+			<footer class="footer">
+
+			</footer>
+		</div>
+	</body>
+	</html>
