--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
 	<div class="container">
-		<header class="header">
+		<header class="header" id="header">
 			<div id="logo">
 				<h1><img src="logo.png" alt="MP Solutions"></h1>
 				<div class="ulcontainer">
 					<nav class="nav">
 						<ul>
+							<li><a href="#header">Inicio</a></li>
 							<li><a href="#nosotros">Nosotros</a></li>
-							<li><a href="#section2">Menu X</a></li>
-							<li><a href="#section3">Menu X</a></li>
-							<li><a href="#section4">Menu X</a></li>
+							<li><a href="#servicios">Servicios</a></li>
+							<li><a href="#contacto">Contacto</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -32,52 +32,84 @@
 						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
 					</div>
 					<div class="arrow">
-						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+						<a href="#servicios"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
 					</div>
 				</section>
-				<section class="section servicios" id="section2">
+				<section class="section servicios" id="servicios">
 					<div class="textcontainer">
 						<h2 class="title">Servicios</h2>
 						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
 						<div class="boxParent">
 							<div class="boxChild">
-								<img src="#" alt="img">
+								<img src="placeholder.jpg" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="#" alt="img">
+								<img src="placeholder.jpg" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="#" alt="img">
+								<img src="placeholder.jpg" alt="img">
 								<h3>Item</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis quo maxime, officiis vero aperiam sequi vitae consectetur, architecto voluptatibus fugit sed numquam, corrupti eum sapiente, similique assumenda magnam! Sint, dicta.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="#" alt="img">
+								<img src="placeholder.jpg" alt="img">
 								<h3>Item</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit vel exercitationem laudantium tempora nostrum ipsam amet placeat est numquam provident quis, sequi ut a aperiam possimus, necessitatibus? Tenetur, quod, nam.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 						</div>
 					</div>
 					<div class="arrow">
-						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+						<a href="#contacto"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
 					</div>
 				</section>
-				<section class="section contacto" id="section3">
+				<section class="section contacto" id="contacto">
 					<div class="textcontainer">
 						<h2 class="title">Contacto</h2>
-						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
-					</div>
-					<div class="arrow">
-						<i class="fa fa-arrow-circle-down" aria-hidden="true"></i>
+						<div class="boxParent">
+							<div class="boxChild box-border">
+								<i class="fa fa-mobile contact-item" aria-hidden="true"></i>
+								<h3>Item</h3>
+								<ul>
+									<li><p>Telef 6666666</p></li>
+									<li><p>Cel 9999999</p></li>
+								</ul>
+							</div>
+							<div class="boxChild box-border">
+								<i class="fa fa-map-marker contact-item" aria-hidden="true"></i>
+								<h3>Item</h3>
+								<ul>
+									<li><p>Av ejemplo 123</p></li>
+									<li><p> San Isidro - Lima Perú</p></li>
+								</ul>
+							</div>
+							<div class="boxChild box-border">
+								<i class="fa fa-envelope contact-item" aria-hidden="true"></i>
+								<h3>Item</h3>
+								<ul>
+									<li><p>Email:</p></li>
+									<li><p>email@example.com</p></li>
+								</ul>
+							</div>
+						</div>
 					</div>
 				</section>
 			</main>
 			<footer class="footer">
-
+				<img src="logo.png" alt="MP Solutions">
+				<nav class="nav">
+					<ul>
+						<li><a href="#header">Inicio</a></li>
+						<li><a href="#nosotros">Nosotros</a></li>
+						<li><a href="#servicios">Servicios</a></li>
+						<li><a href="#contacto">Contacto</a></li>
+					</ul>
+				</nav>
+				<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+				<script src="scripts.js"></script>
 			</footer>
 		</div>
 	</body>
