finished with adrian's images

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		<main class="main">
 			<section class="section nosotros" id="nosotros">
 					<div class="textcontainer">
-						<h2 class="title">Nosotros</h2>
-						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
+						<h2 class="title" style="color:#095263;">Nosotros</h2>
+						<p style="color:#095263;">Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
 					</div>
 					<div class="arrow">
 						<a href="#servicios"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
@@ -38,32 +38,32 @@
 				<section class="section servicios" id="servicios">
 					<div class="textcontainer">
 						<h2 class="title">Servicios</h2>
-						<p>Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
+						<p style="color:white;">Somos especialistas en la fabricación y construcción de estructuras metálicas de todo tipo y en la prefabricación de spools, contando para ello con el personal y los equipos requeridos, siguiendo estrictos controles de calidad.</p>
 						<div class="boxParent">
 							<div class="boxChild">
-								<img src="placeholder.jpg" alt="img">
+								<img src="servicio1.png" style="height:60px; width:70px;" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="placeholder.jpg" alt="img">
+								<img src="servicio2.png" style="height:60px; width:70px;" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="placeholder.jpg" alt="img">
+								<img src="servicio3.png" style="height:60px; width:70px;" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 							<div class="boxChild">
-								<img src="placeholder.jpg" alt="img">
+								<img src="servicio4.png" style="height:60px; width:70px;" alt="img">
 								<h3>Item</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit consectetur veritatis vero nobis unde minima at, perspiciatis eligendi nisi, minus necessitatibus, accusamus a architecto libero aliquid recusandae facilis deleniti optio.</p>
 							</div>
 						</div>
 					</div>
 					<div class="arrow">
-						<a href="#contacto"><i class="fa fa-arrow-circle-down" aria-hidden="true"></i></a>
+						<a href="#contacto"><i class="fa fa-arrow-circle-down" aria-hidden="true" style="color:white;"></i></a>
 					</div>
 				</section>
 				<section class="section contacto" id="contacto">
@@ -99,7 +99,7 @@
 				</section>
 			</main>
 			<footer class="footer">
-				<img src="logo.png" alt="MP Solutions">
+				<img src="logoverde.png" alt="MP Solutions">
 				<nav class="nav">
 					<ul>
 						<li><a href="#header">Inicio</a></li>
